* Fixed style problem where the first column would be stretched to almost   the full pagewidht, while other columns need that space much more than   the first column. [Guido]

--- a/themes/achievo_modern/styles/recordlist.css
+++ b/themes/achievo_modern/styles/recordlist.css
@@ -19,11 +19,6 @@
   width: 95%;
 }
 
-.recordListThFirst, .recordListTdFirst
-{
-  width: 95% ! important;
-}
-
 .searchform input
 {
   width: 95%;
@@ -102,7 +97,7 @@ input[type="checkbox"]
   border: 0px;
 }
 
-.checkBox 
+.checkBox
 {
   width: auto ! important;
 }
